# libertai-telegram-agent

./: .env.example  Dockerfile  pyproject.toml
docs/plans/: 2026-02-09-telegram-bot-design.md  2026-02-09-telegram-bot-implementation.md
src/libertai_telegram_agent/: config.py  main.py
src/libertai_telegram_agent/database/: db.py
src/libertai_telegram_agent/handlers/: account.py  chat.py  commands.py  image.py
src/libertai_telegram_agent/services/: encryption.py  inference.py  rate_limiter.py  tools.py
tests/: test_account.py  test_chat.py  test_commands.py  test_config.py  test_database.py  test_encryption.py  test_image.py  test_inference.py  test_main.py  test_rate_limiter.py
