[project]
name = "libertai-telegram-agent"
version = "0.1.0"
description = "Telegram bot for LibertAI decentralized AI inference"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[ext]>=22.0",
    "openai>=1.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "cryptography>=44.0",
    "pydantic-settings>=2.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
